--- a/assets/stylesheets/shoestring.scss
+++ b/assets/stylesheets/shoestring.scss
@@ -8,8 +8,44 @@
 @import "navbar";
 
 body {
+ 
   h1 {
     color: white;
   }
 }
+
+// $columns: col-lg !default
+
+@for $i from 1 through 12 {
+  .col-lg-#{$i} {
+    width: 100%*($i/12);
+    margin: 0 auto;
+  }
+}
+
+.col-lg-4 {
+    width: 33%;
+    float: left;
+    margin: 0 auto;
+  }
+
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  clear: both;
+}
+
+.row {
+  clear: both;
+  margin: 0 auto;
+}
+
+.section-colored{
+  clear:both;
+}
+
+// .col-lg-12 { 
+//   width: 100%;
+// }
 
