--- a/public/stylesheets/shoestring.css
+++ b/public/stylesheets/shoestring.css
@@ -477,3 +477,68 @@ footer {
 
 body h1 {
   color: white; }
+
+.col-lg-1 {
+  width: 8.33333%;
+  margin: 0 auto; }
+
+.col-lg-2 {
+  width: 16.66667%;
+  margin: 0 auto; }
+
+.col-lg-3 {
+  width: 25%;
+  margin: 0 auto; }
+
+.col-lg-4 {
+  width: 33.33333%;
+  margin: 0 auto; }
+
+.col-lg-5 {
+  width: 41.66667%;
+  margin: 0 auto; }
+
+.col-lg-6 {
+  width: 50%;
+  margin: 0 auto; }
+
+.col-lg-7 {
+  width: 58.33333%;
+  margin: 0 auto; }
+
+.col-lg-8 {
+  width: 66.66667%;
+  margin: 0 auto; }
+
+.col-lg-9 {
+  width: 75%;
+  margin: 0 auto; }
+
+.col-lg-10 {
+  width: 83.33333%;
+  margin: 0 auto; }
+
+.col-lg-11 {
+  width: 91.66667%;
+  margin: 0 auto; }
+
+.col-lg-12 {
+  width: 100%;
+  margin: 0 auto; }
+
+.col-lg-4 {
+  width: 33%;
+  float: left;
+  margin: 0 auto; }
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  clear: both; }
+
+.row {
+  clear: both;
+  margin: 0 auto; }
+
+.section-colored {
+  clear: both; }
