--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 ">
-            <img src="http://placehold.it/1140x450" class="img-responsive" style="text-align:center">
+            <img src="http://placehold.it/1140x450" class="img-responsive">
           </div>
         </div><!-- row -->
       </div><!-- container -->
