--- a/public/stylesheets/shoestring.css
+++ b/public/stylesheets/shoestring.css
@@ -480,65 +480,201 @@ body h1 {
 
 .col-lg-1 {
   width: 8.33333%;
-  margin: 0 auto; }
+  float: left; }
+  @media (max-width: 1000px) {
+    .col-lg-1 col-lg-4 {
+      float: none; } }
+
+.col-md-1 {
+  width: 8.33333%;
+  float: left; }
+
+.col-xs-i {
+  width: 8.33333%;
+  float: left; }
 
 .col-lg-2 {
   width: 16.66667%;
-  margin: 0 auto; }
+  float: left; }
+  @media (max-width: 1000px) {
+    .col-lg-2 col-lg-4 {
+      float: none; } }
+
+.col-md-2 {
+  width: 16.66667%;
+  float: left; }
+
+.col-xs-i {
+  width: 16.66667%;
+  float: left; }
 
 .col-lg-3 {
   width: 25%;
-  margin: 0 auto; }
+  float: left; }
+  @media (max-width: 1000px) {
+    .col-lg-3 col-lg-4 {
+      float: none; } }
+
+.col-md-3 {
+  width: 25%;
+  float: left; }
+
+.col-xs-i {
+  width: 25%;
+  float: left; }
 
 .col-lg-4 {
   width: 33.33333%;
-  margin: 0 auto; }
+  float: left; }
+  @media (max-width: 1000px) {
+    .col-lg-4 col-lg-4 {
+      float: none; } }
+
+.col-md-4 {
+  width: 33.33333%;
+  float: left; }
+
+.col-xs-i {
+  width: 33.33333%;
+  float: left; }
 
 .col-lg-5 {
   width: 41.66667%;
-  margin: 0 auto; }
+  float: left; }
+  @media (max-width: 1000px) {
+    .col-lg-5 col-lg-4 {
+      float: none; } }
+
+.col-md-5 {
+  width: 41.66667%;
+  float: left; }
+
+.col-xs-i {
+  width: 41.66667%;
+  float: left; }
 
 .col-lg-6 {
   width: 50%;
-  margin: 0 auto; }
+  float: left; }
+  @media (max-width: 1000px) {
+    .col-lg-6 col-lg-4 {
+      float: none; } }
+
+.col-md-6 {
+  width: 50%;
+  float: left; }
+
+.col-xs-i {
+  width: 50%;
+  float: left; }
 
 .col-lg-7 {
   width: 58.33333%;
-  margin: 0 auto; }
+  float: left; }
+  @media (max-width: 1000px) {
+    .col-lg-7 col-lg-4 {
+      float: none; } }
+
+.col-md-7 {
+  width: 58.33333%;
+  float: left; }
+
+.col-xs-i {
+  width: 58.33333%;
+  float: left; }
 
 .col-lg-8 {
   width: 66.66667%;
-  margin: 0 auto; }
+  float: left; }
+  @media (max-width: 1000px) {
+    .col-lg-8 col-lg-4 {
+      float: none; } }
+
+.col-md-8 {
+  width: 66.66667%;
+  float: left; }
+
+.col-xs-i {
+  width: 66.66667%;
+  float: left; }
 
 .col-lg-9 {
   width: 75%;
-  margin: 0 auto; }
+  float: left; }
+  @media (max-width: 1000px) {
+    .col-lg-9 col-lg-4 {
+      float: none; } }
+
+.col-md-9 {
+  width: 75%;
+  float: left; }
+
+.col-xs-i {
+  width: 75%;
+  float: left; }
 
 .col-lg-10 {
   width: 83.33333%;
-  margin: 0 auto; }
+  float: left; }
+  @media (max-width: 1000px) {
+    .col-lg-10 col-lg-4 {
+      float: none; } }
+
+.col-md-10 {
+  width: 83.33333%;
+  float: left; }
+
+.col-xs-i {
+  width: 83.33333%;
+  float: left; }
 
 .col-lg-11 {
   width: 91.66667%;
-  margin: 0 auto; }
+  float: left; }
+  @media (max-width: 1000px) {
+    .col-lg-11 col-lg-4 {
+      float: none; } }
+
+.col-md-11 {
+  width: 91.66667%;
+  float: left; }
+
+.col-xs-i {
+  width: 91.66667%;
+  float: left; }
 
 .col-lg-12 {
   width: 100%;
-  margin: 0 auto; }
+  float: left; }
+  @media (max-width: 1000px) {
+    .col-lg-12 col-lg-4 {
+      float: none; } }
 
-.col-lg-4 {
-  width: 33%;
-  float: left;
-  margin: 0 auto; }
+.col-md-12 {
+  width: 100%;
+  float: left; }
+
+.col-xs-i {
+  width: 100%;
+  float: left; }
 
 .container {
   margin-left: auto;
   margin-right: auto;
   clear: both; }
 
+.container {
+  margin: 0 auto;
+  width: 90%; }
+
+.container:before, .container:after {
+  clear: both;
+  display: block;
+  content: ''; }
+
 .row {
   clear: both;
-  margin: 0 auto; }
+  text-align: center; }
 
 .section-colored {
   clear: both; }
