--- a/views/layout.html
+++ b/views/layout.html
@@ -6,11 +6,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+
     <title>Modern Business - Start Bootstrap Template</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href="/stylesheets/shoestring.css" rel="stylesheet">
+    <link href="/stylesheets/mediaqueries.css" rel="stylesheet">
 
   </head>
 
